# protocol-converter

./: .env.example  .gitignore  README.md  pyproject.toml
.codebuddy/: models.json
docs/: note.md
examples/: __init__.py  integration_test_chat_backend.py  integration_test_responses_backend.py
protocol_converter/: __init__.py  anthropic.py  openai_chat.py  openai_responses.py
protocol_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
protocol_converter_pkg/: .gitignore  README.md  pyproject.toml
protocol_converter_pkg/examples/: __init__.py  integration_test.py  integration_test_all_9_paths.py  integration_test_anthropic_backend.py  integration_test_chat_backend.py  integration_test_responses_backend.py  test_openrouter_responses.py  unified_test.py
protocol_converter_pkg/protocol_converter/: __init__.py  anthropic.py  engine.py  exceptions.py  openai_chat.py  openai_responses.py  protocol_detector.py
protocol_converter_pkg/protocol_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
protocol_converter_pkg/tests/: test_protocol_converter.py
